#!/usr/bin/env python3
"""
Database Manager Component for AI Camera v1.3

This is a stub component that will be implemented later.
"""

import logging
from typing import Dict, Any

logger = logging.getLogger(__name__)


class DatabaseManager:
    """Stub Database Manager Component."""
    
    def __init__(self, logger=None):
        self.logger = logger or logging.getLogger(__name__)
        self.logger.info("DatabaseManager initialized (stub)")
    
    def get_status(self) -> Dict[str, Any]:
        """Get database status."""
        return {
            'status': 'stub',
            'message': 'Database manager not implemented yet'
        }
    
    def cleanup(self):
        """Cleanup resources."""
        self.logger.info("DatabaseManager cleanup completed")
